...
        viewModel.searchBarCancelButtonClicked()
    }
}

extension SearchViewController: SearchViewModelDelegate {
    func prepareUI() {
        searchCollectionView.accessibilityIdentifier = "news_collectionView"
        tabBarItem.accessibilityIdentifier = "tab_search"
        tabBarController?.tabBar.accessibilityIdentifier = "tab_search"
    }
    
    func navigateToDetailVC(selectedCell: Article?) {
        let detailVC = NewsDetailFactory.makeDetailViewController()
...
