...
            <point key="canvasLocation" x="664" y="-1"/>
        </scene>
        <!--Search-->
        <scene sceneID="Goa-rN-zoi">
            <objects>
                <navigationController id="Bfd-PX-8ei" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="H9l-wQ-Da6"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AAL-OM-ESX">
                        <rect key="frame" x="0.0" y="118" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="dOU-MZ-x4V" kind="relationship" relationship="rootViewController" id="4Jb-oW-MrT"/>
...
